Remove Environment Variable

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
 <script>
-    const apiKey={process.env.apiKey};
+    const apiKey='';
     const apiUrl="https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
     const searchBox = document.querySelector(".search input")
